Update README < 300 words and add comments